--- a/templates/page.form.liquid
+++ b/templates/page.form.liquid
@@ -168,7 +168,7 @@
     #comfirm-checkbox {
       {% comment %} display: none; {% endcomment %}
     }
-    #comfirm-checkbox:checked ~ .contact-form {
+    #comfirm-checkbox[type=checkbox]:checked ~ .contact-form {
       display: none !important;
     }
     .form-p {
