--- a/templates/page.form.liquid
+++ b/templates/page.form.liquid
@@ -22,7 +22,7 @@
             <p>お問い合わせ</p>
           </div>
 
-          <div class="contact-form form-vertical">
+          <div class="contact-form form-vertical" id="contact-form">
 
             <div class="rte">
               <p>WAAKに関するお問い合わせや採用ご希望など、すべてのお問い合わせはこちらのフォームからお受けしておりますフォーム送信後は担当者より折り返しご連絡しますので少々お待ちください。</p>
@@ -92,8 +92,7 @@
             </div>
 
             <div class="checkbox">
-              <label for="comfirm-checkbox">お問合せ内容を確認する</label>
-              <input  type="checkbox" id="comfirm-checkbox">
+              <input type="buttom" value="お問合せ内容を確認する" class="comfirm-btn" onclick="comfirm()">
             </div>
 
             <div class="form-p">
@@ -102,7 +101,84 @@
             </div>
           </div>
 
-        <input type="submit" class="comfirm-btn" value="入力内容を確認する">
+          <div class="contact-form form-vertical" id="confirm-form">
+
+            <div class="rte">
+              <p>切り替え完了</p>
+            </div>
+
+            {{ form.errors | default_errors }}
+
+            {% include 'form-status', form: form, form_id: formId %}
+            <div class="form">
+              <label for="ContactForm-contac-type">お問い合わせ種別</label>
+              <select id="ContactForm-contac-type" name="contact[お問い合わせ種別]">
+                <option>サンプル１</option>
+                <option>サンプル２</option>
+                <option>サンプル３</option>
+              </select>
+            </div>
+
+            <div class="form">
+              <label for="{{ formId }}-name">{{ 'contact.form.name' | t }}</label>
+              <input required class="required" type="text" id="{{ formId }}-name" name="contact[{{ 'contact.form.name' | t }}]" value="{% if form[name] %}{{ form[name] }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="仕事　太郎">
+            </div>
+
+            <div class="form">
+              <label for="{{ formId }}-name-furigana">フリガナ</label>
+              <input type="text" id="{{ formId }}-name-furigana" name="contact[フリガナ]" value="" placeholder="シゴト　タロウ">
+            </div>
+
+            <div class="form">
+              <label for="{{ formId }}-company-name">会社名</label>
+              <input type="text" id="{{ formId }}-company-name" name="contact[会社名]" value="" placeholder="ワアク株式会社">
+            </div>
+
+            <div class="form">
+              <label for="{{ formId }}-email">メールアドレス<span aria-hidden="true">*</span></label>
+              <input
+                type="email"
+                id="{{ formId }}-email"
+                name="contact[email]"
+                autocorrect="off"
+                autocapitalize="off"
+                value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
+                aria-required="true"
+                placeholder="sample@waak.space"
+                {%- if form.errors contains 'email' -%}
+                  class="input--error"
+                  aria-invalid="true"
+                  aria-describedby="{{ formId }}-email-error"
+                {%- endif -%}
+                >
+              {%- if form.errors contains 'email' -%}
+                <span id="{{ formId}}-email-error" class="input-error-message">
+                  <span class="visually-hidden">{{ 'general.accessibility.error' | t }} </span>
+                  {% include 'icon-error' %}
+                  <span>{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
+                </span>
+              {%- endif -%}
+            </div>
+
+            <div class="form">
+              <label for="{{ formId }}-phone">{{ 'contact.form.phone' | t }}</label>
+              <input type="tel" id="{{ formId }}-phone" name="contact[{{ 'contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form[phone] %}{{ form[phone] }}{% elsif customer %}{{ customer.phone }}{% endif %}" placeholder="080********">
+            </div>
+
+            <div class="form">
+              <label class="textarea-label" for="{{ formId }}-message">お問合せ内容</label>
+              <textarea class="textarea" rows="10" id="{{ formId }}-message" name="contact[{{ 'contact.form.message' | t }}]" placeholder="お問合せ内容をご入力ください。">{% if form.body %}{{ form.body }}{% endif %}</textarea>
+            </div>
+
+            <div class="checkbox">
+              <input type="buttom" value="お問合せ内容を確認する" class="comfirm-btn" onclick="back()">
+            </div>
+
+            <div class="form-p">
+              <p>※ご入力いただいた個人情報は、お問い合わせへの回答・連絡のみに利用いたします。</p>
+              <p>※ご入力いただいた個人情報に関しては、<a href="#" style="border-bottom: 1px solid black;padding-bottom: 5px;">プライバシーポリシー</a>をご参照ください。</p>
+            </div>
+          </div>
 
         {% endif %}
         {% comment %} #####################        送信が失敗したときの処理 {% endcomment %}
@@ -110,6 +186,31 @@
     </div>
   </div>
 </div>
+
+<script>
+  document.getElementById("contact-form").style.display ="block";
+  document.getElementById("comfirm-form").style.display ="none";
+
+  function comfirm(){
+    const contactForm = document.getElementById("contact-form");
+
+    if(contactForm.style.display=="block"){
+      contactForm.style.display ="none"
+    } else {
+      contactForm.style.display ="block"
+    }
+  }
+
+  function back(){
+    const comfirmForm = document.getElementById("comfirm-form");
+
+    if(comfirmForm.style.display=="none"){
+      comfirmForm.style.display ="block"
+    } else {
+      comfirmForm.style.display ="none"
+    }
+  }
+</script>
 
 <style>
   @media screen and (min-width: 750px) {
@@ -152,25 +253,21 @@
     ::placeholder {
       color: rgb(160, 160, 160);
     }
-    .checkbox label {
+    .comfirm-btn {
       display: block;
       line-height: 2.5em;
       text-align: center;
       margin: 0 auto !important;
       width: 300px !important;
       border: 1px solid black;
+      cursor: pointer;
     }
-    .checkbox label:hover {
+    .comfirm-btn:hover {
       transition: 0.5s;
       background: black;
       color: white;
     }
-    #comfirm-checkbox {
-      {% comment %} display: none; {% endcomment %}
-    }
-    #comfirm-checkbox[type=checkbox]:checked ~ .contact-form {
-      display: none !important;
-    }
+
     .form-p {
       padding-top: 50px;
     }
